--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@nrwl/cli": "15.0.0",
+    "@nrwl/esbuild": "^15.0.0",
     "@nrwl/eslint-plugin-nx": "15.0.0",
     "@nrwl/express": "15.0.0",
     "@nrwl/jest": "15.0.0",
@@ -25,6 +26,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "esbuild": "^0.15.7",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "28.1.1",
